fixed broken css on quote box

--- a/quote-generator.css
+++ b/quote-generator.css
@@ -24,7 +24,6 @@ body {
 
 #quote {
   background-color: white;
-  text-align: center;
   color: black;
   width: 500px;
   height: 200px;
